[gd_scene load_steps=41 format=3 uid="uid://g7u1uank1std"]

[ext_resource type="Script" uid="uid://cn012ndn2bvy8" path="res://scripts/world.gd" id="1_aqk2v"]
[ext_resource type="PackedScene" uid="uid://42m5coqfeveg" path="res://scenes/player.tscn" id="1_f3sb7"]
[ext_resource type="PackedScene" uid="uid://bn624iiy2usgu" path="res://scenes/explosion.tscn" id="2_pkg7o"]
[ext_resource type="Shader" uid="uid://ds4psquedce46" path="res://resources/shaders/bkg.gdshader" id="2_tlwt5"]
[ext_resource type="Script" uid="uid://b243f52hq6y1h" path="res://scripts/ui/hud.gd" id="3_pkg7o"]
[ext_resource type="PackedScene" uid="uid://dx0062o1xecke" path="res://scenes/components/powerup.tscn" id="4_w7kh3"]
[ext_resource type="PackedScene" uid="uid://dxj4h0ee4wh1w" path="res://scenes/components/damage_label.tscn" id="5_e3hyu"]
[ext_resource type="FontFile" uid="uid://cwcwuijx2mhrk" path="res://resources/fonts/Orbitron-VariableFont_wght.ttf" id="5_w7kh3"]
[ext_resource type="PackedScene" uid="uid://ctcjauugj4hvq" path="res://scenes/projectiles/mega_bomb_explosion.tscn" id="6_q5onr"]
[ext_resource type="PackedScene" uid="uid://gbwi00phf4bv" path="res://scenes/components/tube.tscn" id="8_4mrxx"]
[ext_resource type="Texture2D" uid="uid://wvw6q1t6bjca" path="res://resources/texture/Grass003_2K-JPG_Color.jpg" id="8_7iits"]
[ext_resource type="PackedScene" uid="uid://cmaalf560lg66" path="res://scenes/spawn_manager.tscn" id="9_7r4gi"]
[ext_resource type="Texture2D" uid="uid://r5ue8iyb7tlb" path="res://resources/texture/Grass003_2K-JPG_NormalGL.jpg" id="9_oo54l"]
[ext_resource type="Texture2D" uid="uid://c3bc4br7flgsr" path="res://resources/texture/Grass003_2K-JPG_Roughness.jpg" id="10_kpybi"]
[ext_resource type="PackedScene" uid="uid://dppaho64ksomi" path="res://scenes/enemies/basic_enemy.tscn" id="13_pm21f"]
[ext_resource type="PackedScene" uid="uid://jio4jnlmcbf2" path="res://scenes/enemies/diagonal_enemy.tscn" id="14_2lf6f"]
[ext_resource type="PackedScene" uid="uid://dy6gxlv74amyw" path="res://scenes/enemies/shooting_enemy.tscn" id="15_7iits"]
[ext_resource type="PackedScene" uid="uid://cir3mi5ohwsr3" path="res://scenes/enemies/aiming_enemy.tscn" id="16_oo54l"]
[ext_resource type="PackedScene" uid="uid://d0g4cnld8nlvm" path="res://scenes/enemies/basic_path_enemy.tscn" id="17_kpybi"]
[ext_resource type="PackedScene" uid="uid://c8rhhptsmt63u" path="res://scenes/enemies/asteroid.tscn" id="18_ctatt"]
[ext_resource type="PackedScene" uid="uid://bnpqmu30lv5t0" path="res://scenes/enemies/boss.tscn" id="19_xgqkh"]
[ext_resource type="Script" uid="uid://51unt42sqa7b" path="res://scripts/enemies/mountains.gd" id="22_kpybi"]
[ext_resource type="ArrayMesh" uid="uid://bj64f77drum37" path="res://resources/mountain.res" id="23_ctatt"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_7iits"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_oo54l"]
width = 1024
height = 1024
seamless = true
noise = SubResource("FastNoiseLite_7iits")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4mrxx"]
render_priority = 0
shader = ExtResource("2_tlwt5")
shader_parameter/albedo_tex = ExtResource("8_7iits")
shader_parameter/roughness_tex = ExtResource("10_kpybi")
shader_parameter/normal_tex = ExtResource("9_oo54l")
shader_parameter/noise_tex = SubResource("NoiseTexture2D_oo54l")
shader_parameter/albedo_color = Color(0, 0, 0, 1)
shader_parameter/speed_scale = 0.0
shader_parameter/dist = 0.0
shader_parameter/mesh_size = Vector2(80, 60)
shader_parameter/mix_rate = 0.5
shader_parameter/uv_scale = 4.0

[sub_resource type="PlaneMesh" id="PlaneMesh_f3sb7"]
material = SubResource("ShaderMaterial_4mrxx")
size = Vector2(200, 150)

[sub_resource type="LabelSettings" id="LabelSettings_dwbse"]
font = ExtResource("5_w7kh3")
font_size = 32
font_color = Color(0.227451, 0, 0, 1)
outline_size = 10
outline_color = Color(1, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_pm21f"]
font = ExtResource("5_w7kh3")
font_size = 96
font_color = Color(0, 0, 0, 1)
outline_size = 32
outline_color = Color(1, 1, 0, 1)

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_pm21f"]
sky_top_color = Color(0.822915, 0.855465, 0.900956, 1)
sun_angle_max = 110.0
energy_multiplier = 3.0

[sub_resource type="Sky" id="Sky_2lf6f"]
sky_material = SubResource("ProceduralSkyMaterial_pm21f")

[sub_resource type="Environment" id="Environment_dwbse"]
background_mode = 2
sky = SubResource("Sky_2lf6f")
sky_custom_fov = 25.4
ambient_light_sky_contribution = 0.5
reflected_light_source = 2
glow_enabled = true
glow_bloom = 0.2

[sub_resource type="BoxShape3D" id="BoxShape3D_jhx03"]
size = Vector3(1, 50, 100)

[sub_resource type="BoxShape3D" id="BoxShape3D_o8fc1"]
size = Vector3(1, 50, 100)

[sub_resource type="BoxShape3D" id="BoxShape3D_xo05s"]
size = Vector3(100, 50, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_w7kh3"]
size = Vector3(160.33, 50, 1)

[sub_resource type="BoxMesh" id="BoxMesh_7r4gi"]
size = Vector3(100, 20, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_7r4gi"]
size = Vector3(185.729, 50, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_dss4m"]
size = Vector3(100, 50, 1)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_7t5mc"]
plane = Plane(0, 1, 0, -1)

[node name="World" type="Node3D"]
script = ExtResource("1_aqk2v")
explosion_scene = ExtResource("2_pkg7o")
tube_scene = ExtResource("8_4mrxx")
powerup_scene = ExtResource("4_w7kh3")
damage_label_scene = ExtResource("5_e3hyu")
bomb_explosion_scene = ExtResource("6_q5onr")

[node name="Ground" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -28.5813, -27, -44)
cast_shadow = 0
mesh = SubResource("PlaneMesh_f3sb7")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="HUD" type="Control" parent="CanvasLayer"]
custom_minimum_size = Vector2(360, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_pkg7o")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/HUD/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/HUD/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 64
theme_override_constants/margin_right = 64

[node name="BossHealthBar" type="ProgressBar" parent="CanvasLayer/HUD/MarginContainer/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
visible = false
self_modulate = Color(0, 1, 0, 1)
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
value = 100.0
show_percentage = false

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/HUD/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(284, 0)
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="CanvasLayer/HUD/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Score: 999999"
label_settings = SubResource("LabelSettings_dwbse")
horizontal_alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/HUD/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10
alignment = 2

[node name="MegaBombsContainer" type="VBoxContainer" parent="CanvasLayer/HUD/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 10
alignment = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/HUD/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/MegaBombsContainer"]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
color = Color(1, 1, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer/HUD/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/MegaBombsContainer"]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
color = Color(1, 1, 0, 1)

[node name="ColorRect3" type="ColorRect" parent="CanvasLayer/HUD/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/MegaBombsContainer"]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
color = Color(1, 1, 0, 1)

[node name="ShieldBar" type="ProgressBar" parent="CanvasLayer/HUD/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
modulate = Color(0, 0.678431, 1, 0.784314)
custom_minimum_size = Vector2(24, 32)
layout_mode = 2
size_flags_vertical = 1
step = 1.0
value = 100.0
fill_mode = 3
show_percentage = false

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer/HUD/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
modulate = Color(0, 1, 0, 0.784314)
custom_minimum_size = Vector2(24, 32)
layout_mode = 2
size_flags_vertical = 1
step = 1.0
value = 100.0
fill_mode = 3
show_percentage = false

[node name="StageCompletedLabel" type="Label" parent="CanvasLayer/HUD"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "STAGE COMPLETED"
label_settings = SubResource("LabelSettings_pm21f")

[node name="Player" parent="." instance=ExtResource("1_f3sb7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)

[node name="GalagaCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.0871558, 0.996195, 0, -0.996195, -0.0871558, 0, 20, -17)
projection = 1
current = true
size = 40.0

[node name="ZaxxonCamera" type="Camera3D" parent="."]
transform = Transform3D(0.707107, -0.276289, 0.650895, 0, 0.920505, 0.390732, -0.707107, -0.276289, 0.650895, 56.5, 20, 44)
cull_mask = 524287
projection = 1
size = 40.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.519158, 16.2413, -25.7029)
layers = 3
shadow_enabled = true
shadow_opacity = 0.85

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_dwbse")

[node name="WorldBorders" type="StaticBody3D" parent="."]
collision_mask = 4

[node name="LeftBorder" type="CollisionShape3D" parent="WorldBorders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -36.5, -10, 0)
shape = SubResource("BoxShape3D_jhx03")

[node name="RighBorder" type="CollisionShape3D" parent="WorldBorders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 36.5, -10, 0)
shape = SubResource("BoxShape3D_o8fc1")

[node name="BackBorder" type="CollisionShape3D" parent="WorldBorders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -10, 3.5)
shape = SubResource("BoxShape3D_xo05s")

[node name="LeftTopBorder" type="CollisionShape3D" parent="WorldBorders"]
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, -55.54, -10, -83.821)
shape = SubResource("BoxShape3D_w7kh3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="WorldBorders/LeftTopBorder"]
visible = false
mesh = SubResource("BoxMesh_7r4gi")
skeleton = NodePath("")

[node name="RightTopBorder" type="CollisionShape3D" parent="WorldBorders"]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 15.558, -10, -46.535)
shape = SubResource("BoxShape3D_7r4gi")

[node name="TopBorder" type="CollisionShape3D" parent="WorldBorders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -10, -38.5)
shape = SubResource("BoxShape3D_dss4m")

[node name="BottomBorder" type="CollisionShape3D" parent="WorldBorders"]
visible = false
shape = SubResource("WorldBoundaryShape3D_7t5mc")
disabled = true
debug_fill = false

[node name="SpawnManager" parent="." instance=ExtResource("9_7r4gi")]
enemy_scene = Dictionary[int, PackedScene]({
0: ExtResource("13_pm21f"),
1: ExtResource("14_2lf6f"),
2: ExtResource("15_7iits"),
3: ExtResource("16_oo54l"),
4: ExtResource("17_kpybi"),
5: ExtResource("18_ctatt"),
6: ExtResource("19_xgqkh")
})
total_waves = 1

[node name="GalagaCameraPos" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.0871558, 0.996195, 0, -0.996195, -0.0871558, 0, 20, -17)

[node name="ZaxxonCameraPos" type="Marker3D" parent="."]
transform = Transform3D(0.707107, -0.276289, 0.650895, 0, 0.920505, 0.390732, -0.707107, -0.276289, 0.650895, 56.5, 20, 44)

[node name="Mountains" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12, -27, -44)
script = ExtResource("22_kpybi")
max_z_pos = 150.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="Mountains"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -47.967, 0, 59.7483)
mesh = ExtResource("23_ctatt")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Mountains"]
transform = Transform3D(0.880321, 0, -0.4511, 0, 1.25, 0, 0.357121, 0, 1.11198, -46.7595, 0, 31.74)
mesh = ExtResource("23_ctatt")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Mountains"]
transform = Transform3D(0.990107, 0, 0.140314, 0, 1, 0, -0.140314, 0, 0.990107, -46.7595, 0, -1.02528)
mesh = ExtResource("23_ctatt")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Mountains"]
transform = Transform3D(1.18128, 0, -0.211162, 0, 0.8, 0, 0.211162, 0, 1.18128, -46.7595, 0, -29.4878)
mesh = ExtResource("23_ctatt")

[node name="MeshInstance3D5" type="MeshInstance3D" parent="Mountains"]
transform = Transform3D(0.812976, 0, -0.88265, 0, 0.8, 0, 0.88265, 0, 0.812976, -46.7595, 0, -58.8011)
mesh = ExtResource("23_ctatt")

[node name="Mountains2" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12, -27, -194)
script = ExtResource("22_kpybi")
max_z_pos = 95.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="Mountains2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -47.967, 0, 59.7483)
mesh = ExtResource("23_ctatt")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Mountains2"]
transform = Transform3D(0.880321, 0, -0.4511, 0, 1.25, 0, 0.357121, 0, 1.11198, -46.7595, 0, 31.74)
mesh = ExtResource("23_ctatt")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Mountains2"]
transform = Transform3D(0.990107, 0, 0.140314, 0, 1, 0, -0.140314, 0, 0.990107, -46.7595, 0, -1.02528)
mesh = ExtResource("23_ctatt")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Mountains2"]
transform = Transform3D(1.18128, 0, -0.211162, 0, 0.8, 0, 0.211162, 0, 1.18128, -46.7595, 0, -29.4878)
mesh = ExtResource("23_ctatt")

[node name="MeshInstance3D5" type="MeshInstance3D" parent="Mountains2"]
transform = Transform3D(0.812976, 0, -0.88265, 0, 0.8, 0, 0.88265, 0, 0.812976, -46.7595, 0, -58.8011)
mesh = ExtResource("23_ctatt")
